2.1

UI - Option to hide status bar when synchronized (default enabled). Disable to always show status indicators.



2.0.0.2

UI - Implement an improved "new account" page; which makes witnessing more visible as well as better displays and advertizes various other capabilities of our wallets.
UI - Resolve a minor issue where old Legacy accounts were incorrectly hidden by UI in some circumstances, due to an old already fixed issue that was in some older 1.6.x wallets.
CMDFLAG - Add a new command line flag "-resyncforblockindexupgrade" for the benefit of some devices that may be having trouble upgrading.
CMDFLAG - Add a new command line flag "-reverseheaders" to allow control over whether to use reverse headers or not.
CORE - Various code quality improvements; travis now running with '-Werror -Wall -Wextra' for first time.



2.0.0.1

RPC - Fix a small issue with rescan progress percentage
CORE - Fix an issue with locked wallets and account indexes that was triggering assertions in some cases.
UI - Fix a possible minor crash that some users may have been encountering during upgrade.
UI - Fix an issue with GuldenD and repeated unlock requests, limit to a single unlock request.




2.0.0

This release incorporates three new major feature branches, which combined involve over a year of intense development effort:
* PoW² - See https://github.com/Gulden/gulden-official/raw/master/technical_documentation/Gulden_PoW2.pdf for technical information
Highlights include: Ability to lock funds for a period of time and earn rewards while securing the network. Drastically enhanced network security.

UI  - New "witness overview" dialog with info and statistics on witness accounts, complete with a graph showing current and predicted earnings.
UI  - New "witness fund" dialog, with estimate to help pick the right weight when funding an account.
CORE - New blockchain consensus rules for a PoW² driven blockchain with determistic witnessing.